--- a/packages/client/src/components/MemeCard/MemeCard.scss
+++ b/packages/client/src/components/MemeCard/MemeCard.scss
@@ -1,9 +1,13 @@
-.meme-wrapper {
+.meme-card {
   height: 250px;
-  background: yellow;
   img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+  transition: 0.3s;
+
+  &:hover {
+    outline: 3px solid white;
   }
 }
