--- a/packages/client/src/sass/components/_globals.scss
+++ b/packages/client/src/sass/components/_globals.scss
@@ -48,6 +48,10 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
+input:focus {
+  outline: none;
+}
+
 // Buttons & links
 a {
   color: black;
