--- a/packages/client/src/components/MemeCard/MemeCard.scss
+++ b/packages/client/src/components/MemeCard/MemeCard.scss
@@ -1,13 +1,26 @@
+@use "../../sass/components/colors" as c;
+
 .meme-card {
   height: 250px;
+  transition: 0.3s;
+  position: relative;
+
+  .meme-cover {
+    opacity: 0%;
+    width: 100%;
+    height: 100%;
+    background: c.$lightColor20;
+    backdrop-filter: blur(20px);
+    z-index: 10;
+    position: absolute;
+
+    &:hover {
+      opacity: 100%;
+    }
+  }
   img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-  }
-  transition: 0.3s;
-
-  &:hover {
-    outline: 3px solid white;
   }
 }
