feat: added meme in Upload page

--- a/packages/client/src/sass/components/_colors.scss
+++ b/packages/client/src/sass/components/_colors.scss
@@ -24,6 +24,10 @@ $mainGradient: linear-gradient(332deg, #e36728, #e67f29, #e8962a, #e9ac2a);
   background: $lightColor;
 }
 
+.bg-light-20 {
+  background: $lightColor20;
+}
+
 .bg-dark {
   background: $darkColor;
 }
